--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS FLEXBOX</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -53,7 +53,7 @@
     <section class="articles">
         <article>
             <div class="main-content"> 
-                <p>MAECENAS LIBERO NUNC EU ERAT</p>
+                <p class="heading">MAECENAS LIBERO NUNC EU ERAT</p>
                 <div class="background">
                     <img src="images/articleimage.jpg" class="image">    
                     <div class="text">
@@ -65,11 +65,11 @@
                 </div>
             </div>
             <div class="sub-content">
-                <p>ETIAM EROS NULLA POSUERE</p>
+                <p class="heading">ETIAM EROS NULLA POSUERE</p>
                 <div class="image1">
                     <img src="images/articleimage.jpg">
                     <div class="text">
-                        <p>PHASELLUS MASSA FELLIS IN<br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
+                        <p class="heading">PHASELLUS MASSA FELLIS IN</p><br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br><p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
                         <div class="read-more">
                             <a href="#">READ MORE >></a>
                         </div>
@@ -78,7 +78,7 @@
                 <div class="image1">
                     <img src="images/articleimage.jpg">
                     <div class="text">
-                        <p>PHASELLUS MASSA FELLIS IN<br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
+                        <p class="heading">PHASELLUS MASSA FELLIS IN</p><br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br><p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
                         <div class="read-more">
                             <a href="#">READ MORE >></a>
                         </div>
@@ -87,7 +87,7 @@
                 <div class="image1">
                     <img src="images/articleimage.jpg">
                     <div class="text">
-                        <p>PHASELLUS MASSA FELLIS IN<br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
+                        <p class="heading">PHASELLUS MASSA FELLIS IN</p><br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br><p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
                         <div class="read-more">
                             <a href="#">READ MORE >></a>
                         </div>
@@ -97,8 +97,8 @@
         </article>
     </section>
     <section class="sub-articles">
-        <div class="heading">
-            <p>DONEC FACILISIS VOLUTPAT LIGULA NEC EGETAS.</p>
+        <div class="head">
+            <p class="heading">DONEC FACILISIS VOLUTPAT LIGULA NEC EGETAS.</p>
             <p>Integer varius enim id augue faucibus mattis. Pellentesque scelerisque nibh eu mi convallis, ac feugiat nulla tincidunt.</p>
         </div>
         <article class="sub-container">
@@ -125,15 +125,14 @@
     <section class="end">
         <article class="end-content">
             <div class="about">
-                <p>LOREM IPSUM DOLOR</p>
+                <p class="heading">LOREM IPSUM DOLOR</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, hic ullam recusandae soluta molestiae omnis iste aliquam non dolor enim? Ullam fugit consectetur illum dolores. Error id sed sequi quaerat.</p>
                 <p>Thandalam,Chennai,600056</p>
                 <i class="fa fa-phone">+00(123) 456 7890</i>
                 <i class="fa fa-envelope"> INFO@DOMAIN.COM</i>
             </div>
             <div class="quicklinks">
-                <p>QUICK LINKS</p>
-                <br><br>
+                <p class="heading">QUICK LINKS</p><br>
                 <a href="#">Home Page</a>
                 <a href="#">Blog</a>
                 <a href="#">Gallery</a>
@@ -141,7 +140,7 @@
                 <a href="#">Contact Us</a>
             </div>
             <div class="form">
-                <p>KEEP IN TOUCH</p><br><br>
+                <p class="heading">KEEP IN TOUCH</p><br><br>
                 <input type="email" placeholder="Email">
                 <button type="button">SUBMIT</button>
             </div>
