Updated class Names

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <article>
             <div class="main-content"> 
                 <p class="heading">MAECENAS LIBERO NUNC EU ERAT</p>
-                <div class="background">
+                <div>
                     <img src="images/articleimage.jpg" class="image">    
                     <div class="text">
                         <p>URNA SIT AMET PULVINAR<br><br>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urna sit amet.....</p>
@@ -66,7 +66,7 @@
             </div>
             <div class="sub-content">
                 <p class="heading">ETIAM EROS NULLA POSUERE</p>
-                <div class="image1">
+                <div class="sub-content-article">
                     <img src="images/articleimage.jpg">
                     <div class="text">
                         <p class="heading">PHASELLUS MASSA FELLIS IN</p><br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br><p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="image1">
+                <div class="sub-content-article">
                     <img src="images/articleimage.jpg">
                     <div class="text">
                         <p class="heading">PHASELLUS MASSA FELLIS IN</p><br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br><p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="image1">
+                <div class="sub-content-article">
                     <img src="images/articleimage.jpg">
                     <div class="text">
                         <p class="heading">PHASELLUS MASSA FELLIS IN</p><br>By <span style="color: rgb(57, 193, 57);">A Name </span>Friday, 6 April 2045<br><br><p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urnasit amet.....</p>
