--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="sub-article1">
                 <img src="images/image.jpg">
                 <div class="text1">
-                    <p>QUISQUE VEHICULA URNA SIT AMET PULVINAR DAPIBUS</p>
+                    <p>QUISQUE VEHICULA URNA SIT AMET</p>
                     <div class="read-more">
                         <a href="#">READ MORE >></a>
                     </div>
